iptables.rules
* mangle
-N SHADOWSOCKS
-N SHADOWSOCKS_MARK

# re-route DNS udp packets
-A SHADOWSOCKS -d 0.0.0.0/8 -j RETURN
-A SHADOWSOCKS -d 10.0.0.0/8 -j RETURN
-A SHADOWSOCKS -d 127.0.0.0/8 -j RETURN
-A SHADOWSOCKS -d 169.254.0.0/16 -j RETURN
-A SHADOWSOCKS -d 172.16.0.0/12 -j RETURN
-A SHADOWSOCKS -d 192.168.0.0/16 -j RETURN
-A SHADOWSOCKS -d 193.0.0.0/8 -j RETURN
-A SHADOWSOCKS -d 224.0.0.0/4 -j RETURN
-A SHADOWSOCKS -d 240.0.0.0/4 -j RETURN
-A SHADOWSOCKS -p udp -j TPROXY --on-port {SS_REDIR_PORT} --tproxy-mark 0x01/0x01

-A SHADOWSOCKS_MARK -d 0.0.0.0/8 -j RETURN
-A SHADOWSOCKS_MARK -d 10.0.0.0/8 -j RETURN
-A SHADOWSOCKS_MARK -d 127.0.0.0/8 -j RETURN
-A SHADOWSOCKS_MARK -d 169.254.0.0/16 -j RETURN
-A SHADOWSOCKS_MARK -d 172.16.0.0/12 -j RETURN
-A SHADOWSOCKS_MARK -d 192.168.0.0/16 -j RETURN
-A SHADOWSOCKS_MARK -d 193.0.0.0/8 -j RETURN
-A SHADOWSOCKS_MARK -d 224.0.0.0/4 -j RETURN
-A SHADOWSOCKS_MARK -d 240.0.0.0/4 -j RETURN
-A SHADOWSOCKS_MARK -p udp -j MARK --set-mark 1

# apply the rules
-A PREROUTING ! -i lo -j SHADOWSOCKS
-A OUTPUT -j SHADOWSOCKS_MARK
COMMIT

*nat
-N SHADOWSOCKS
# ignore packets to VPS
-A SHADOWSOCKS -d {REMOTE_ADDR}/32 -p tcp --dport {REMOTE_PORT} -j RETURN
# Ignore LANs and any other addresses you'd like to bypass the proxy
# See Wikipedia and RFC5735 for full list of reserved networks.
# See ashi009/bestroutetb for a highly optimized CHN route list.
-A SHADOWSOCKS -d 0.0.0.0/8 -j RETURN
-A SHADOWSOCKS -d 10.0.0.0/8 -j RETURN
-A SHADOWSOCKS -d 127.0.0.0/8 -j RETURN
-A SHADOWSOCKS -d 169.254.0.0/16 -j RETURN
-A SHADOWSOCKS -d 172.16.0.0/12 -j RETURN
-A SHADOWSOCKS -d 192.168.0.0/16 -j RETURN
-A SHADOWSOCKS -d 193.0.0.0/8 -j RETURN
-A SHADOWSOCKS -d 224.0.0.0/4 -j RETURN
-A SHADOWSOCKS -d 240.0.0.0/4 -j RETURN
# skip safe ssh port
-A SHADOWSOCKS -d {REMOTE_ADDR}/32 -p tcp --dport 24689 -j RETURN
# Anything else should be redirected to shadowsocks's local port
-A SHADOWSOCKS -p tcp -m set ! --match-set china dst -j REDIRECT --to-ports {SS_REDIR_PORT}

# apply the rules
-A PREROUTING ! -i lo -p tcp -j SHADOWSOCKS
-A OUTPUT -p tcp -j SHADOWSOCKS

# forwarded packet SNAT
-A POSTROUTING -j MASQUERADE

COMMIT
